# telegram-mcp-ag

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  PLAN.md  README.md  SECURITY.md  TECHNICAL.md  config.env.example  install.ps1  install.sh  pyproject.toml  telegram_mcp_with_transcribe.py
.claude/skills/: build_zip.py
.claude/skills/setup-telegram-mcp/: SKILL.md
.claude/skills/telegram-digest/: SKILL.md
.github/workflows/: release.yml  tests.yml
examples/: claude-code.mcp.json  codex.config.toml
mcpb/: .mcpbignore  build.sh  manifest.json  pyproject.toml
mcpb/src/: server.py
src/telegram_mcp_ag/: __init__.py  config.py  login.py  server.py
tests/: test_config.py  test_installer_syntax.py  test_login.py  test_relogin_hint.py  test_server.py  test_skill_zip.py
