# Зависимости бандла .mcpb. Claude Desktop через uv сам скачает нужный Python,
# создаст изолированное окружение и поставит отсюда всё необходимое.
#
# Код самого telegram-mcp-ag не ставится из git, а кладётся в бандл при сборке
# (build.sh копирует ../src/telegram_mcp_ag в src/). Поэтому здесь только
# внешние зависимости, а версия кода в релизе совпадает с версией манифеста.

[project]
name = "telegram-mcp-ag-bundle"
version = "0.1.0"
description = "MCPB bundle for telegram-mcp-ag"
requires-python = ">=3.10"
dependencies = [
  "telegram-mcp @ git+https://github.com/chigwell/telegram-mcp.git@0d7b7e3630397ff931624fee7e4b0f33a134c513",
  "python-dotenv>=1.1.0",
  # QR login from the chat. pypng is qrcode's pure-Python PNG writer: it keeps
  # Pillow, a large compiled wheel, out of the bundle for one monochrome image.
  "qrcode>=8.0",
  "pypng>=0.20220715",
]

# Бандл — не устанавливаемый пакет, а набор зависимостей плюс скрипт входа:
# uv только собирает окружение и не пытается собрать колесо из этой папки.
[tool.uv]
package = false
